*SVN*

* Allow sweepers to be created solely for expiring after controller actions, not model changes [DHH]

* Added assigns method to ActionController::Caching::Sweeper to easily access instance variables on the controller [DHH]

* Give the legacy X-POST_DATA_FORMAT header greater precedence during params parsing for backward compatibility.  [Jeremy Kemper]

* Fixed that link_to with an href of # when using :method will not allow for click-through without JavaScript #7037 [stevenbristol/josh]

* Fixed that radio_button_tag should generate unique ids #3353 [BobSilva/rebecca/josh]

* Fixed that HTTP authentication should work if the header is called REDIRECT_X_HTTP_AUTHORIZATION as well #6754 [mislaw]

* Don't mistakenly interpret the request uri as the query string.  #8731 [lifofifo, Jeremy Kemper]

* Make ActionView#view_paths an attr_accessor for real this time.  Also, don't perform an unnecessary #compact on the @view_paths array in #initialize.  Closes #8582 [dasil003, julik, rick]

* Tolerate missing content type on multipart file uploads. Fix for Safari 3.  [Jeremy Kemper]

* Deprecation: remove pagination. Install the classic_pagination plugin for forward compatibility, or move to the superior will_paginate plugin.  #8157 [Josh Peek]

* Action caching is limited to GET requests returning 200 OK status.  #3335 [tom@craz8.com, halfbyte, Dan Kubb, Josh Peek]

* Improve Text Helper test coverage.  #7274 [Rob Sanheim, Josh Peek]

* Improve helper test coverage.  #7208, #7212, #7215, #7233, #7234, #7235, #7236, #7237, #7238, #7241, #7243, #7244 [Rich Collins, Josh Peek]

* Improve UrlRewriter tests.  #7207 [Rich Collins]

* Resources: url_for([parent, child]) generates /parents/1/children/2 for the nested resource. Likewise with the other simply helpful methods like form_for and link_to.  #6432 [mhw, Jonathan Vaught, lotswholetime]

* Assume html format when rendering partials in RJS. #8076 [Rick]
