@@ -1,5 +1,7 @@
 *SVN*
 
+* Prefix nested resource named routes with their action name, e.g. new_group_user_path(@group) instead of group_new_user_path(@group). The old nested action named route is deprecated in Rails 1.2.4.  #8558 [David Chelimsky]
+
 * Allow sweepers to be created solely for expiring after controller actions, not model changes [DHH]
 
 * Added assigns method to ActionController::Caching::Sweeper to easily access instance variables on the controller [DHH]
